<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    android:background="#F6F6F6"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                app:iss_auto_cycle="true"
                app:iss_delay="1000"
                app:iss_period="1000"
                app:iss_text_align="CENTER"></com.denzcoskun.imageslider.ImageSlider>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:fontFamily="@string/bold"
                android:text="VITS SATNA"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="@string/About_College"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/dark_color"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@string/bold"
                        android:text="Departments"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_size" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:background="#fff"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/about_vits"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="VITS"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:id="@+id/about_vims"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"

                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="VIMS"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />


                            <TextView
                                android:id="@+id/about_vimr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="VIMR"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />


                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </LinearLayout> 
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:id="@+id/textContact_Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@string/bold"
                    android:text="Contact Details"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:background="@drawable/baseline_whatsapp_24" />

                <TextView
                    android:id="@+id/textViewwhatsApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="8966 903 524"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />



                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:background="@drawable/baseline_email_24" />



                    <TextView
                        android:id="@+id/textViewVITS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:fontFamily="@string/light"
                        android:text="contactsatna@vitsdpr.ac.in"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size" />



                </LinearLayout>



                <TextView
                    android:id="@+id/textViewADDres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="VITS, Karhi Road, Amoudha, Satna, Madhya Pradesh , 485002"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />



                <ImageView
                    android:id="@+id/map"
                    android:layout_width="380dp"
                    android:layout_height="380dp"
                    android:layout_marginTop="36dp"
                    android:scaleType="center"
                    android:background="@drawable/map_vits"/>



            </LinearLayout>
            
            


        </LinearLayout>


    </ScrollView>


</FrameLayout>